<resources>
    <string name="app_name">StoryStarCoaching</string>
    <string name="btn_schedule_appointment">Schedule Appointment</string>
    <string name="btn_submit_testimonial">Submit Testimonial</string>
    <string name="btn_submit_referral">Submit Referral</string>
    <string name="activity_name_scheduleApp">Schedule Appointment</string>
    <string name="rb_freeSession">15 mins free intro call</string>
    <string name="rb_storySession">Story Coaching (1 hour)</string>
    <string name="rb_superSession">Content Discovery Super Session (1 hour)</string>
    <string name="text_selectAppType">Please Select One of The Following Appointment Type:</string>
    <string name="text_selectDate">Please Select a Date for the Appointment</string>
    <string name="text_selectTime">Please Select a Time for The Appointment</string>
    <string name="btn_submit_appointment">Submit</string>
    <string name="activity_name_schedule_testimonial">Submit Testimonial</string>
    <string name="btn_cancel_testi">Cancel</string>
    <string name="btn_submit_testi">Submit</string>
    <string name="textview_rating">Rating:</string>
    <string name="edittext_testi_comment">Please leave us a comment</string>
    <string name="btn_cancel_apt">Cancel</string>
    <string name="activity_name_submit_referral">Submit Referral</string>
    <string name="textview_referral_header">Know someone that might benefit from StoryStar<br /> Coaching?<br /> Submit a referral below!</string>
    <string name="button_submit_referral">Submit</string>
    <string name="button_cancel_referral">Cancel</string>
    <string name="edittext_first_name">First Name</string>
    <string name="edittext_phone_number">Phone Number</string>
    <string name="edittext_email">Email</string>
    <string name="edittext_last_name">Last Name</string>
    <string name="home_page_star_pic">home page star</string>
    <string name="hint_phoneClient">Phone</string>
    <string name="hint_dateClient">Select Date</string>
    <string name="hint_emailClient">Email</string>
    <string name="hint_timeClient">Select Time</string>
    <string name="hint_fnameClient">First Name</string>
    <string name="hint_lnameClient">Last Name</string>
    <string name="btn_viewApt">View Appointments</string>
    <string name="btn_cancelApt">Cancel Appointment</string>
    <string name="btn_updateApt">Update Appointment</string>
    <string name="activity_label_updateApt">Update Appointment</string>
    <string name="activity_label_aptConfirmed">Appointment Confirmed</string>
    <string name="btn_return_home_aptConfirmed">Return Home</string>
    <string name="textview_aptConfirmed">Dear Applicant, your appointment has been confirmed! An email has been sent to your inbox with a Zoom invite. </string>
    <string name="activity_label_referralConfirmation">Referral Submited</string>
    <string name="button_return_home_referralConfirmed">Return Home</string>
    <string name="textview_referralConfirmed">Your referral has been gladly received. We will look into it and contact the referee as soon as possible. Thank you!</string>
    <string name="btn_return_home_TestimonialConfirmed">Return Home</string>
    <string name="textview_TestimonialConfirmed">Your Feedback Has been Well Received! Thank you!</string>
    <string name="activity_label_TestimonialConfirmed">Testimonial Confirmed</string>
    <string name="textview_aptUpdatedConfirmation">Dear Applicant, your appointment has been updated! An email has been sent to your inbox with a Zoom invite.</string>
</resources>