<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9A0B3B"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="313dp"
        android:layout_height="272dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/home_page_star_pic"
        android:src="@drawable/star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_scheduleApp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="256dp"
        android:onClick="launchScheduleApp"
        android:text="@string/btn_schedule_appointment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_updateApt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:onClick="launchUpdateAppointment"
        android:text="@string/btn_updateApt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_referral"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="launchSubmitReferral"
        android:text="@string/btn_submit_referral"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_cancelApt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:onClick="launchCancelAppointment"
        android:text="@string/btn_cancelApt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_submitTestimonial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:onClick="launchSubmitTestimonial"
        android:text="@string/btn_submit_testimonial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_viewApt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:onClick="launchViewAppointment"
        android:text="@string/btn_viewApt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>